# Catched

./: .gitignore  DESIGN.md  README.md  settings.gradle.kts
.agents/skills/android-security-doc/: SKILL.md
.github/workflows/: release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  apk_signature.c  apk_signature.h  art_method.c  art_method.h  catched.c  frida_detect.c  frida_detect.h  hook_detect.c  hook_detect.h  integrity_detect.c  integrity_detect.h  maps_scanner.c  maps_scanner.h  npatch_detect.c  npatch_detect.h  root_detect.c  root_detect.h  seccomp_detect.c  seccomp_detect.h  signal_detect.c  signal_detect.h  ssl_detect.c  ssl_detect.h  syscall_wrapper.c  syscall_wrapper.h
docs/: README.md
docs/frameworks/: debugger.md  device-integrity.md  emulator.md  frida.md  native-inline-hook.md  npatch-lspatch.md  root-magisk.md  xposed-lsposed.md
docs/techniques/: art-internal-hook-detection.md  artmethod-introspection.md  classloader-analysis.md  code-integrity-verification.md  elf-segment-gap-analysis.md  filesystem-path-check.md  got-plt-hook.md  hardware-fingerprint.md  inline-code-patching.md  java-reflection.md  jit-cache-validation.md  memory-pattern-scan.md  network-probe.md  package-manager-scan.md  procfs-scanning.md  return-address-validation.md  seccomp-bpf-detection.md  signal-handler-inspection.md  signature-verification.md  stack-trace-analysis.md  svc-direct-syscall.md  system-property-analysis.md  vdso-validation.md
gradle/: libs.versions.toml
keystore/: release.jks
(+26 files in other folders)
